<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nackademin.foureverhh.sfiapplication180113.Stockholm">

    <ImageView
        android:id="@+id/img_Stockholm"
        android:layout_width="0dp"
        android:layout_height="218dp"
        android:layout_marginBottom="240dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img_Stockholm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/stockholmlocationpic" />

    <TextView
        android:id="@+id/txt_Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="291dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_Address"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_Stockholm"
        app:layout_constraintTop_toBottomOf="@+id/img_Stockholm"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stockholmAddress"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stockholmAddress"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Address"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_openingHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_OpeningHour"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stockholmOpentime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_Address"
        app:layout_constraintTop_toBottomOf="@+id/stockholmAddress" />

    <LinearLayout
        android:id="@+id/stockholmOpentime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/stockholmPage"
        app:layout_constraintEnd_toEndOf="@+id/stockholmAddress"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="@+id/stockholmAddress"
        app:layout_constraintTop_toBottomOf="@+id/stockholmAddress"
        app:layout_constraintVertical_bias="0.375">

        <LinearLayout
            android:id="@+id/stockholmOpenTime1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weekday1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weekday1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stockholmMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stockholmMonday"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stockholmOpenTime2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weekday2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weekday2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stockholmTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stockholmTuesday"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stochholmOpenTime3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weekday3"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weekday3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stockholmWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stockholmWednesday"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stockholmOpenTime4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weekday4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weekday4"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stockholmThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stockholmThursday"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/stockholmPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autoLink="all"
        android:clickable="true"
        android:focusable="true"
        android:text="http://www.stockholm.se/ForskolaSkola/Vuxenutbildning/SFI---Utbildning-i-svenska-for-invandrare/Vem-far-studera/"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_openingHour" />

</android.support.constraint.ConstraintLayout>
